<resources>
    <string name="app_name">POS</string>
    <string name="daftar">Daftar</string>
    <string name="daftarkan_akun">Daftarkan Akun</string>
    <string name="welcome">Selamat Datang</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="desc_riwayat_transaksi">Digunakan untuk melihat riwayat transaksi</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="scan">Scan</string>
    <string name="dummy_name">Jimi Henderson</string>
    <string name="logout">logout</string>
    <string name="edit_profile">Ubah Profile</string>
    <string name="edit_password">Ubah Password</string>
    <string name="dummy_email">jimi@gmail.com</string>
    <string name="back_to_dashboard">back to dashboard</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="save">Simpan</string>
    <string name="todo">TODO</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="confirmation_password">Ulang Password</string>
    <string name="payment_confirmation">Konfirmasi Pembayaran</string>
    <string name="do_payment_confirmation">Lakukan konfirmasi pembayaran</string>
    <string name="are_you_sure">Sudah yakin dengan pesanan mu?</string>
    <string name="items_you_choose">Barang yang anda pilih</string>
    <string name="text_payment_confirmation">Barang sudah sesuai? Tekan tombol dibawah ini untuk mengirimkan permintaan pembayaran</string>
    <string name="success_payment_conf">Konfirmasi Dikirim Silahkan Lakukan Pembayaran Cash</string>
    <string name="cont">Lanjutkan</string>
    <string name="transaction_history">Riwayat Transaksi</string>
    <string name="save_barcode">simpan barcode</string>
</resources>