<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardUser">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="192dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_login_24"
        android:contentDescription="@string/logout" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="124dp"
        android:text="@string/welcome"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myPict"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="87dp"
        android:text="@string/dummy_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="357dp"
        android:onClick="scanQR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_qr_code_scanner_24"
        android:contentDescription="@string/scan" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="31dp"
        android:onClick="cart"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/ic_baseline_shopping_cart_24"
        android:contentDescription="@string/cart" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="355dp"
        android:onClick="profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/profile" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="225dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:srcCompat="@drawable/ic_baseline_access_time_24"
        android:contentDescription="@string/desc_riwayat_transaksi" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myPict"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/retropus"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>