<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="71dp"
        android:contentDescription="@string/todo"
        android:onClick="profile"
        app:layout_constraintBottom_toTopOf="@+id/input_old_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_left_24" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/input_old_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="267dp"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/input_new_password"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:hint="@string/new_password"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_old_password"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/input_confirmation_password"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:hint="@string/confirmation_password"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_new_password"
        app:met_floatingLabel="highlight" />

    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="129dp"
        android:background="@color/purple_200"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_old_password" />
</androidx.constraintlayout.widget.ConstraintLayout>