<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="90dp"
        android:onClick="profile"
        app:layout_constraintBottom_toTopOf="@+id/input_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_arrow_left_24"
        android:contentDescription="@string/todo" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/input_nama"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="146dp"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/input_email"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="331dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_nama"
        app:layout_constraintVertical_bias="0.615"
        app:met_floatingLabel="highlight" />

    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="230dp"
        android:background="@color/purple_200"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />
</androidx.constraintlayout.widget.ConstraintLayout>