<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardUser">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="229dp"
        android:contentDescription="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_login_24" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="205dp"
        android:layout_marginBottom="34dp"
        android:text="Hallo Admin"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="280dp"
        android:contentDescription="@string/scan"
        android:onClick="listUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/ic_baseline_people_24" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/cart"
        android:onClick="cart"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/myPict"
        app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="280dp"
        android:contentDescription="@string/profile"
        android:onClick="profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="162dp"
        android:contentDescription="@string/desc_riwayat_transaksi"
        android:onClick="transactionHistory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:srcCompat="@drawable/ic_baseline_access_time_24" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myPict"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="89dp"
        android:src="@drawable/retropus"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>