<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart">

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/back_to_dashboard"
        android:onClick="dashboardUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_left_24" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="Cart"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="16dp"
        android:text="Total Barang : 6"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="221dp"
        android:text="Total Harga : Rp. 100.000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="List Barang"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="0dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageButton16"
        app:layout_constraintStart_toStartOf="@+id/imageButton16"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName"
        app:srcCompat="@drawable/ic_baseline_horizontal_rule_24" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Makanan Ringan A"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName1"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName1"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text|number"
        android:text="2"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toStartOf="@+id/imageButton9"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="0dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="@+id/imageButton18"
        app:layout_constraintStart_toStartOf="@+id/imageButton18"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName2"
        app:srcCompat="@drawable/ic_baseline_add_24" />


    <ImageButton
        android:id="@+id/imageButton16"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8"
        app:srcCompat="@drawable/ic_baseline_horizontal_rule_24" />

    <EditText
        android:id="@+id/editTextTextPersonName1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Makanan Ringan A"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:inputType="text|number"
        android:text="2"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <ImageButton
        android:id="@+id/imageButton18"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName4"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName4"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="13dp"
        android:text="@string/are_you_sure"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName1"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName1" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:text="@string/do_payment_confirmation"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="26dp"
        android:background="@color/purple_200"
        android:text="@string/payment_confirmation"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>